--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -615,9 +615,10 @@ footer {
   padding: 0;
   min-height: auto;
   opacity: 1;
-  transition: all .5s; }
+  transition: all 1s; }
   .load.loaded {
-    opacity: 0; }
+    opacity: 0;
+    z-index: -1; }
 
 @media screen and (max-width: 780px) {
   .banner, .load {
