--- a/webroot/css/style.scss
+++ b/webroot/css/style.scss
@@ -749,6 +749,7 @@ footer{
   }
 }
 
+
 .load{
   @extend .banner;
   position: fixed;
@@ -759,9 +760,10 @@ footer{
   padding: 0;
   min-height: auto;
   opacity: 1;
-  transition: all .5s;
+  transition: all 1s;
   &.loaded{
     opacity: 0;
+    z-index: -1;
   }
 
 }
